test/tests/integration/helpers/fail/messageId.ts
//TODO Add message id fail tests
const messageIdFailTest = () => {};

export { messageIdFailTest };
